--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   shared_preferences: ^2.2.2
+  location: ^5.0.3
+  syncfusion_flutter_maps: ^23.1.44
   
   
 
